[package]
name = "line_racing"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.1"
bevy_polyline = { git = "https://github.com/fslabs/bevy_polyline", rev = "bdfe67c76694d60c25694d4c3f8dd531cd6e4171" }
bevy_vector_shapes = "0.12.0"
bevy_mod_mesh_tools = { git = "https://github.com/DGriffin91/bevy_mod_mesh_tools", rev = "3d379fd8aa6b7dbbe9101217e78a3cbf3e8acd9b" }
